--- a/TipCalculator/Base.lproj/Main.storyboard
+++ b/TipCalculator/Base.lproj/Main.storyboard
@@ -104,6 +104,20 @@
             </objects>
             <point key="canvasLocation" x="537.5" y="152.5"/>
         </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="qg9-z7-qiW">
+            <objects>
+                <viewController id="KQt-Eh-hpi" customClass="SettingsViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mi3-Dd-YZv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SKp-HN-lIH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="985" y="153"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="7tB-e5-y01">
             <objects>
