--- a/TipCalculator/Base.lproj/Main.storyboard
+++ b/TipCalculator/Base.lproj/Main.storyboard
@@ -98,7 +98,13 @@
                             <outletCollection property="gestureRecognizers" destination="fcF-oU-H69" appends="YES" id="WzB-iq-CDm"/>
                         </connections>
                     </view>
-                    <navigationItem key="navigationItem" id="9Tp-5B-Z5Q"/>
+                    <navigationItem key="navigationItem" id="9Tp-5B-Z5Q">
+                        <barButtonItem key="rightBarButtonItem" title="Settings" id="A2c-gw-eRP">
+                            <connections>
+                                <segue destination="KQt-Eh-hpi" kind="push" id="Mb3-Vc-MOX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="billTextField" destination="RyK-q1-Hom" id="KaG-y8-ciL"/>
                         <outlet property="highTipLabel" destination="6RH-T6-bdS" id="Sv6-Uy-eL8"/>
@@ -117,7 +123,7 @@
             </objects>
             <point key="canvasLocation" x="537.5" y="152.5"/>
         </scene>
-        <!--Settings View Controller-->
+        <!--Settings-->
         <scene sceneID="qg9-z7-qiW">
             <objects>
                 <viewController id="KQt-Eh-hpi" customClass="SettingsViewController" sceneMemberID="viewController">
@@ -128,8 +134,34 @@
                     <view key="view" contentMode="scaleToFill" id="mi3-Dd-YZv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="Ox5-aO-rqw">
+                                <rect key="frame" x="131" y="118" width="200" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="15%"/>
+                                    <segment title="20%"/>
+                                    <segment title="25%"/>
+                                </segments>
+                                <connections>
+                                    <action selector="onDefaultTipChange:" destination="KQt-Eh-hpi" eventType="valueChanged" id="N8N-nL-MAf"/>
+                                    <action selector="onTipSelected:" destination="BYZ-38-t0r" eventType="valueChanged" id="pyh-qv-bIP"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Default Tip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21q-Xg-B1J">
+                                <rect key="frame" x="33" y="122" width="84" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Settings" id="LfC-Qb-ome"/>
+                    <connections>
+                        <outlet property="defaultTipControl" destination="Ox5-aO-rqw" id="RjQ-ff-yQA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SKp-HN-lIH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
